--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -4,9 +4,17 @@
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+  /* @apply bg-white dark:bg-gray-950; */
 
-  @media (prefers-color-scheme: dark) {
+  /* @media (prefers-color-scheme: dark) {
     color-scheme: dark;
-  }
+  } */
 }
+
+.btn-red{
+ @apply bg-red-500 hover:bg-red-400 rounded-md text-white px-4 py-2 font-bold;
+}
+
+.btn-green{
+  @apply bg-green-500 hover:bg-green-400 rounded-md text-white px-4 py-2 font-bold;
+ }
